# template_repository

./: CMakeLists.txt  README.md  install_dependencies.sh
subdir/: CMakeLists.txt
subdir/src/: example.cpp
tests/: CMakeLists.txt  test_example.cpp
